change default text color

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,5 +8,5 @@ body {
   font-family: "Avenir", Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #2c3e50;
+  color: #3b4242;
 }
